--- a/webroot/css/cake.generic.css
+++ b/webroot/css/cake.generic.css
@@ -23,11 +23,12 @@
 
 /** General Style Info **/
 body {
-	background: #003d4c;
-	color: #fff;
+	background: #fff;
+	color: #000;
 	font-family: 'lucida grande', verdana, helvetica, arial, sans-serif;
 	font-size: 90%;
 	margin: 0;
+	text-align: center;
 }
 a {
 	color: #003d4c;
@@ -41,30 +42,6 @@ a:hover {
 a img {
 	border: none;
 }
-h1, h2, h3, h4 {
-	font-weight: normal;
-	margin-bottom: 0.5em;
-}
-h1 {
-	background: #fff;
-	color: #003d4c;
-	font-size: 100%;
-}
-h2 {
-	background: #fff;
-	color: #e32;
-	font-family: 'Gill Sans', 'lucida grande', helvetica, arial, sans-serif;
-	font-size: 190%;
-}
-h3 {
-	color: #2c6877;
-	font-family: 'Gill Sans', 'lucida grande', helvetica, arial, sans-serif;
-	font-size: 165%;
-}
-h4 {
-	color: #993;
-	font-weight: normal;
-}
 ul, li {
 	margin: 0 12px;
 }
@@ -74,28 +51,16 @@ p {
 
 /** Layout **/
 #container {
+	width: 900px;
+	margin: 0 auto;
 	text-align: left;
 }
 
 #header{
-	padding: 10px 20px;
+	
 }
-#header h1 {
-	line-height: 20px;
-	background: #003d4c url('../img/cake.icon.png') no-repeat left;
-	color: #fff;
-	padding: 0px 30px;
-}
-#header h1 a {
-	color: #fff;
-	background: #003d4c;
-	font-weight: normal;
-	text-decoration: none;
-}
-#header h1 a:hover {
-	color: #fff;
-	background: #003d4c;
-	text-decoration: underline;
+#header h1 {	
+	color: #000;
 }
 #content{
 	background: #fff;
